kdevplatform/language/duchain/duchain.cpp
@@ -276,7 +276,8 @@ class DUChainPrivate
     private:
       void run() override {
         QTimer timer;
-        connect(&timer, &QTimer::timeout, this, [this]() {
+        connect(&timer, &QTimer::timeout, &timer, [this]() {
+          Q_ASSERT(QThread::currentThread() == this);
           //Just to make sure the cache is cleared periodically
           ModificationRevisionSet::clearCache();
 
